2011-11-06  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp (string-to-utf8, string-to-utf8): Implemented.

2011-11-06  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (string-to-utf8, string-to-utf8): Implemented.

2011-11-06  Helmut Eller  <heller@common-lisp.net>

	* swank-abcl.lisp (string-to-utf8, string-to-utf8): Implemented.
	(octets-to-jbytes, jbytes-to-octets): New helpers.

2011-11-06  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (utf8-to-string, string-to-utf8): New.

2011-11-03  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (close-connection): Be more careful with non-ascii.

2011-11-03  Helmut Eller  <heller@common-lisp.net>

	Remove dependecy on FLEXI-STREAMS for Lispworks.

	* swank-lispworks.lisp (make-flexi-stream): Deleted.
	(utf8-stream): New class to do the transcoding.
	(accept-connection): Use it.

2011-10-19  Andrew Myers <asm198@gmail.com>

	* swank-allegro.lisp (frob-allegro-field-def): Add missing type to
	ecase for inspector.

2011-10-13  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (all-completions): Remove mixed case syms e.g |Foo|.
	"fo" is not a prefix of "|Foo|" and it would be problematic later.

2011-10-05  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (clear-repl-variables): New functions, clears *, /,
	and + variables.

2011-09-28  Stas Boukarev  <stassats@gmail.com>

	* slime.el: Remove (require 'hideshow), it's not used anymore.
	Spotted by Leo Liu.

2011-09-27  Mark Evenson  <evenson@panix.com>

	* swank-abcl.lisp (describe-symbol-for-emacs): Differentiate
	between function, generic function, special forms, and macros by
	copying SBCL implementation.

2011-09-13  Christophe Rhodes  <csr21@cantab.net>

	* slime.el (slime-simple-complete-symbol): only display "Complete
	but not unique" message if the partial completion figures in the
	completion list.

2011-08-31  Anton Kovalenko  <anton@sw4me.com>

	* swank-sbcl.lisp (preferred-communication-style): check for